k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  template:
    metadata:
      labels:
        io.kompose.network/saleorplatform-saleor-backend-tier: "true"
        io.kompose.service: api
    spec:
      containers:
      - name: api
        image: bstsreg.azurecr.io/api:latest
        ports:
        - containerPort: 8000
        volumeMounts:
          - mountPath: /app/media
            name: saleor-media
      restartPolicy: Always
      volumes:
        - name: saleor-media
          persistentVolumeClaim:
            claimName: saleor-media
status: {}
