k8s/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./.k8s
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dashboard
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./.k8s
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: dashboard
    spec:
      containers:
        image: bstsreg.azurecr.io/dashboard:latest
        name: dashboard
        ports:
          - containerPort: 9000
        resources: {}
      restartPolicy: Always
status: {}
