k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./.k8s
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o ./.k8s
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/saleorplatform-saleor-backend-tier: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: saleor
            - name: POSTGRES_USER
              value: saleor
            - name: PGDATA
              value: "/var/lib/postgresql/data/pgdata"              
          image: tejessaleor.azurecr.io/postgres:11.1-alpine
          name: db
          ports:
            - containerPort: 5432
              name: db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: saleorplatform-saleor-db
      restartPolicy: Always
      volumes:
        - name: saleorplatform-saleor-db
          persistentVolumeClaim:
            claimName: saleorplatform-saleor-db
status: {}
