k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-demo
spec:
  selector:
    matchLabels:
      app: saleor-demo
  template:
    metadata:
      labels:
        app: saleor-demo
    spec:
      containers:
      - name: saleor-demo
        image: bstsreg.azurecr.io/api:lates
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
