k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  template:
    metadata:
      labels:
        io.kompose.service: redis
    spec:
      containers:
        - image: library/redis:5.0-alpine
          name: redis
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: saleorplatform-saleor-redis
      restartPolicy: Always
      volumes:
        - name: saleorplatform-saleor-redis
          persistentVolumeClaim:
            claimName: saleorplatform-saleor-redis
