k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: saleor-demo-service
spec:
  selector:
    app: saleor-demo
  type: LoadBalancer
  ports:
  - port: 9000
    targetPort: 80
